--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports:
     lubridate,
-    S7
-Suggests: 
+    vctrs
+Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
