Added gregorian vctrs class

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,6 @@ Imports:
     lubridate,
     vctrs
 Suggests:
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tibble
 Config/testthat/edition: 3
