Added holiday functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,17 @@ S3method(vec_cast,rd_fixed.rd_fixed)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
 S3method(vec_ptype_abbr,gregorian)
 S3method(vec_ptype_abbr,rd_fixed)
+export(advent)
 export(as_gregorian)
 export(as_rd)
+export(christmas)
+export(epiphany)
 export(gregorian)
 export(rd_fixed)
+export(us_daylight_saving_end)
+export(us_daylight_saving_start)
+export(us_election_day)
+export(us_independence_day)
+export(us_labor_day)
+export(us_memorial_day)
 import(vctrs)
