Added Julian calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,16 @@
 S3method(as.Date,gregorian)
 S3method(as_gregorian,default)
 S3method(as_gregorian,rd_fixed)
+S3method(as_julian,default)
+S3method(as_julian,rd_fixed)
 S3method(as_rd,Date)
 S3method(as_rd,character)
 S3method(as_rd,default)
 S3method(as_rd,gregorian)
+S3method(as_rd,julian)
 S3method(as_rd,numeric)
 S3method(format,gregorian)
+S3method(format,julian)
 S3method(format,rd_fixed)
 S3method(vec_arith,rd_fixed)
 S3method(vec_arith,rd_fixed.default)
@@ -24,10 +28,12 @@ S3method(vec_ptype_abbr,gregorian)
 S3method(vec_ptype_abbr,rd_fixed)
 export(advent)
 export(as_gregorian)
+export(as_julian)
 export(as_rd)
 export(christmas)
 export(epiphany)
 export(gregorian)
+export(julian)
 export(rd_fixed)
 export(us_daylight_saving_end)
 export(us_daylight_saving_start)
