Improved formatting and help of Julian and Gregorian

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(vec_cast,rd_fixed.double)
 S3method(vec_cast,rd_fixed.rd_fixed)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
 S3method(vec_ptype_abbr,gregorian)
+S3method(vec_ptype_abbr,julian)
 S3method(vec_ptype_abbr,rd_fixed)
 export(advent)
 export(as_gregorian)
