--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,4 @@ Suggests:
     testthat (>= 3.0.0),
     tibble
 Config/testthat/edition: 3
+URL: https://pkg.robjhyndman.com/calcal/, https://github.com/robjhyndman/calcal
