--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(as_gregorian)
 export(as_julian)
 export(as_rd)
 export(christmas)
+export(eastern_orthodox_christmas)
 export(epiphany)
 export(gregorian)
 export(julian)
