--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,11 +15,15 @@ S3method(format,gregorian)
 S3method(format,julian)
 S3method(format,rd_fixed)
 S3method(vec_arith,gregorian)
+S3method(vec_arith,julian)
 S3method(vec_arith,rd_fixed)
 S3method(vec_arith,rd_fixed.default)
 S3method(vec_arith.gregorian,gregorian)
 S3method(vec_arith.gregorian,numeric)
+S3method(vec_arith.julian,julian)
+S3method(vec_arith.julian,numeric)
 S3method(vec_arith.numeric,gregorian)
+S3method(vec_arith.numeric,julian)
 S3method(vec_arith.numeric,rd_fixed)
 S3method(vec_arith.rd_fixed,numeric)
 S3method(vec_arith.rd_fixed,rd_fixed)
