--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,14 +36,18 @@ S3method(vec_ptype_abbr,gregorian)
 S3method(vec_ptype_abbr,julian)
 S3method(vec_ptype_abbr,rd_fixed)
 export(advent)
+export(alt_orthodox_easter)
 export(as_gregorian)
 export(as_julian)
 export(as_rd)
 export(christmas)
+export(easter)
 export(eastern_orthodox_christmas)
 export(epiphany)
 export(gregorian)
 export(julian)
+export(orthodox_easter)
+export(pentecost)
 export(rd_fixed)
 export(us_daylight_saving_end)
 export(us_daylight_saving_start)
