rd_fixed now allowing non-integer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ S3method(as_rd,julian)
 S3method(as_rd,numeric)
 S3method(format,gregorian)
 S3method(format,julian)
-S3method(format,rd_fixed)
 S3method(vec_arith,gregorian)
 S3method(vec_arith,julian)
 S3method(vec_arith,rd_fixed)
@@ -31,6 +30,8 @@ S3method(vec_cast,double.rd_fixed)
 S3method(vec_cast,integer.rd_fixed)
 S3method(vec_cast,rd_fixed.double)
 S3method(vec_cast,rd_fixed.rd_fixed)
+S3method(vec_ptype2,double.rd_fixed)
+S3method(vec_ptype2,rd_fixed.double)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
 S3method(vec_ptype_abbr,gregorian)
 S3method(vec_ptype_abbr,julian)
