Added location objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(as_rd,julian)
 S3method(as_rd,numeric)
 S3method(format,gregorian)
 S3method(format,julian)
+S3method(format,location)
 S3method(vec_arith,gregorian)
 S3method(vec_arith,julian)
 S3method(vec_arith,rd_fixed)
@@ -31,10 +32,12 @@ S3method(vec_cast,integer.rd_fixed)
 S3method(vec_cast,rd_fixed.double)
 S3method(vec_cast,rd_fixed.rd_fixed)
 S3method(vec_ptype2,double.rd_fixed)
+S3method(vec_ptype2,location.location)
 S3method(vec_ptype2,rd_fixed.double)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
 S3method(vec_ptype_abbr,gregorian)
 S3method(vec_ptype_abbr,julian)
+S3method(vec_ptype_abbr,location)
 S3method(vec_ptype_abbr,rd_fixed)
 export(advent)
 export(alt_orthodox_easter)
@@ -47,6 +50,7 @@ export(eastern_orthodox_christmas)
 export(epiphany)
 export(gregorian)
 export(julian)
+export(location)
 export(orthodox_easter)
 export(pentecost)
 export(rd_fixed)
