--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,11 @@ S3method(as_rd,default)
 S3method(as_rd,gregorian)
 S3method(as_rd,julian)
 S3method(as_rd,numeric)
+S3method(as_time,POSIXct)
+S3method(as_time,POSIXlt)
+S3method(as_time,default)
+S3method(as_time,numeric)
+S3method(as_time,rd_fixed)
 S3method(format,gregorian)
 S3method(format,julian)
 S3method(format,location)
@@ -44,6 +49,7 @@ export(alt_orthodox_easter)
 export(as_gregorian)
 export(as_julian)
 export(as_rd)
+export(as_time)
 export(christmas)
 export(easter)
 export(eastern_orthodox_christmas)
@@ -54,6 +60,8 @@ export(location)
 export(orthodox_easter)
 export(pentecost)
 export(rd_fixed)
+export(sunrise)
+export(time)
 export(us_daylight_saving_end)
 export(us_daylight_saving_start)
 export(us_election_day)
