Now passing checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(as_rd,Date)
 S3method(as_rd,character)
 S3method(as_rd,default)
 S3method(as_rd,gregorian)
+S3method(as_rd,integer)
 S3method(as_rd,julian)
 S3method(as_rd,numeric)
 S3method(as_time,POSIXct)
@@ -19,6 +20,7 @@ S3method(as_time,rd_fixed)
 S3method(format,gregorian)
 S3method(format,julian)
 S3method(format,location)
+S3method(format,time)
 S3method(vec_arith,gregorian)
 S3method(vec_arith,julian)
 S3method(vec_arith,rd_fixed)
@@ -40,6 +42,7 @@ S3method(vec_ptype2,double.rd_fixed)
 S3method(vec_ptype2,location.location)
 S3method(vec_ptype2,rd_fixed.double)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
+S3method(vec_ptype2,time.time)
 S3method(vec_ptype_abbr,gregorian)
 S3method(vec_ptype_abbr,julian)
 S3method(vec_ptype_abbr,location)
@@ -50,6 +53,7 @@ export(as_gregorian)
 export(as_julian)
 export(as_rd)
 export(as_time)
+export(asr)
 export(christmas)
 export(easter)
 export(eastern_orthodox_christmas)
@@ -61,6 +65,7 @@ export(orthodox_easter)
 export(pentecost)
 export(rd_fixed)
 export(sunrise)
+export(sunset)
 export(time)
 export(us_daylight_saving_end)
 export(us_daylight_saving_start)
