asr, sunrise and sunset now methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,16 @@ S3method(as_time,POSIXlt)
 S3method(as_time,default)
 S3method(as_time,numeric)
 S3method(as_time,rd_fixed)
+S3method(asr,default)
+S3method(asr,rd_fixed)
 S3method(format,gregorian)
 S3method(format,julian)
 S3method(format,location)
 S3method(format,time)
+S3method(sunrise,default)
+S3method(sunrise,rd_fixed)
+S3method(sunset,default)
+S3method(sunset,rd_fixed)
 S3method(vec_arith,gregorian)
 S3method(vec_arith,julian)
 S3method(vec_arith,rd_fixed)
