Changed eastern_orthodox_christmas to orthdox_christmas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,11 +59,11 @@ export(as_rd)
 export(as_time)
 export(christmas)
 export(easter)
-export(eastern_orthodox_christmas)
 export(epiphany)
 export(gregorian)
 export(julian)
 export(location)
+export(orthodox_christmas)
 export(orthodox_easter)
 export(pentecost)
 export(rd_fixed)
