Reimplementing astronomical functions to improve accuracy. Not yet working properly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ S3method(format,gregorian)
 S3method(format,julian)
 S3method(format,location)
 S3method(format,time)
+S3method(lunar_phase,default)
+S3method(lunar_phase,rd_fixed)
 S3method(sunrise,default)
 S3method(sunrise,rd_fixed)
 S3method(sunset,default)
@@ -63,6 +65,7 @@ export(epiphany)
 export(gregorian)
 export(julian)
 export(location)
+export(lunar_phase)
 export(orthodox_christmas)
 export(orthodox_easter)
 export(pentecost)
