Removed some unused functions and exported more functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,7 +59,10 @@ export(as_gregorian)
 export(as_julian)
 export(as_rd)
 export(as_time)
+export(astronomical_easter)
 export(christmas)
+export(day_number)
+export(days_remaining)
 export(easter)
 export(epiphany)
 export(gregorian)
