Change time() to time_of_day()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,15 +12,15 @@ S3method(as_rd,gregorian)
 S3method(as_rd,integer)
 S3method(as_rd,julian)
 S3method(as_rd,numeric)
-S3method(as_time,POSIXct)
-S3method(as_time,POSIXlt)
-S3method(as_time,default)
-S3method(as_time,numeric)
-S3method(as_time,rd_fixed)
+S3method(as_time_of_day,POSIXct)
+S3method(as_time_of_day,POSIXlt)
+S3method(as_time_of_day,default)
+S3method(as_time_of_day,numeric)
+S3method(as_time_of_day,rd_fixed)
 S3method(format,gregorian)
 S3method(format,julian)
 S3method(format,location)
-S3method(format,time)
+S3method(format,time_of_day)
 S3method(lunar_phase,default)
 S3method(lunar_phase,rd_fixed)
 S3method(sunrise,default)
@@ -48,7 +48,7 @@ S3method(vec_ptype2,double.rd_fixed)
 S3method(vec_ptype2,location.location)
 S3method(vec_ptype2,rd_fixed.double)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
-S3method(vec_ptype2,time.time)
+S3method(vec_ptype2,time_of_day.time_of_day)
 S3method(vec_ptype_abbr,gregorian)
 S3method(vec_ptype_abbr,julian)
 S3method(vec_ptype_abbr,location)
@@ -58,7 +58,7 @@ export(alt_orthodox_easter)
 export(as_gregorian)
 export(as_julian)
 export(as_rd)
-export(as_time)
+export(as_time_of_day)
 export(astronomical_easter)
 export(christmas)
 export(day_number)
@@ -75,7 +75,7 @@ export(pentecost)
 export(rd_fixed)
 export(sunrise)
 export(sunset)
-export(time)
+export(time_of_day)
 export(us_daylight_saving_end)
 export(us_daylight_saving_start)
 export(us_election_day)
