--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(rd_fixed)
 export(sunrise)
 export(sunset)
 export(time_of_day)
+export(unlucky_fridays)
 export(us_daylight_saving_end)
 export(us_daylight_saving_start)
 export(us_election_day)
