--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,15 @@ Package: calcal
 Title: Calendrical Calculations
 Version: 0.0.0.9000
 Authors@R:
-    person("Rob", "Hyndman", , "Rob.Hyndman@monash.edu", role = c("aut", "cre", "cph"),
-           comment = c(ORCID = "0000-0002-2140-5352"))
+    c(
+    person("Rob", "Hyndman", , "Rob.Hyndman@monash.edu", role = c("aut", "cre", "trl"),
+           comment = c(ORCID = "0000-0002-2140-5352", "R port")),
+    person("Edward","Reingold", role = c("cph", "ctb"), comment = "Original Lisp code"),
+    person("Nachum","Dershowitz", role = c("cph", "ctb"), comment = "Original Lisp code")
+    )
 Description: An R implementation of the algorithms described in Reingold and
-    Dershowitz (2018) <doi:10.1017/9781107415058>.
-License: GPL (>= 3)
+    Dershowitz (4th ed., Cambridge University Press, 2018) <doi:10.1017/9781107415058>.
+License: Apache License (>= 2)
 ByteCompile: TRUE
 Encoding: UTF-8
 LazyData: yes
