Added full_moons and new_moons

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,10 +64,12 @@ export(day_number)
 export(days_remaining)
 export(easter)
 export(epiphany)
+export(full_moons)
 export(gregorian)
 export(julian)
 export(location)
 export(lunar_phase)
+export(new_moons)
 export(orthodox_christmas)
 export(orthodox_easter)
 export(pentecost)
