Added gregorian date parts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,7 +61,9 @@ export(as_julian)
 export(as_rd)
 export(as_time_of_day)
 export(christmas)
-export(day_number)
+export(day_of_month)
+export(day_of_week)
+export(day_of_year)
 export(days_remaining)
 export(easter)
 export(epiphany)
@@ -70,6 +72,7 @@ export(gregorian)
 export(julian)
 export(location)
 export(lunar_phase)
+export(month_of_year)
 export(new_moons)
 export(orthodox_christmas)
 export(orthodox_easter)
@@ -85,4 +88,5 @@ export(us_election_day)
 export(us_independence_day)
 export(us_labor_day)
 export(us_memorial_day)
+export(week_of_year)
 import(vctrs)
