--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,5 +88,6 @@ export(us_election_day)
 export(us_independence_day)
 export(us_labor_day)
 export(us_memorial_day)
+export(week_of_month)
 export(week_of_year)
 import(vctrs)
