Added iso calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(as.Date,gregorian)
 S3method(as.character,gregorian)
 S3method(as_gregorian,default)
 S3method(as_gregorian,rd_fixed)
+S3method(as_iso,default)
+S3method(as_iso,rd_fixed)
 S3method(as_julian,default)
 S3method(as_julian,rd_fixed)
 S3method(as_rd,Date)
@@ -11,6 +13,7 @@ S3method(as_rd,character)
 S3method(as_rd,default)
 S3method(as_rd,gregorian)
 S3method(as_rd,integer)
+S3method(as_rd,iso)
 S3method(as_rd,julian)
 S3method(as_rd,numeric)
 S3method(as_time_of_day,POSIXct)
@@ -19,6 +22,7 @@ S3method(as_time_of_day,default)
 S3method(as_time_of_day,numeric)
 S3method(as_time_of_day,rd_fixed)
 S3method(format,gregorian)
+S3method(format,iso)
 S3method(format,julian)
 S3method(format,location)
 S3method(format,time_of_day)
@@ -29,14 +33,18 @@ S3method(sunrise,rd_fixed)
 S3method(sunset,default)
 S3method(sunset,rd_fixed)
 S3method(vec_arith,gregorian)
+S3method(vec_arith,iso)
 S3method(vec_arith,julian)
 S3method(vec_arith,rd_fixed)
 S3method(vec_arith,rd_fixed.default)
 S3method(vec_arith.gregorian,gregorian)
 S3method(vec_arith.gregorian,numeric)
+S3method(vec_arith.iso,iso)
+S3method(vec_arith.iso,numeric)
 S3method(vec_arith.julian,julian)
 S3method(vec_arith.julian,numeric)
 S3method(vec_arith.numeric,gregorian)
+S3method(vec_arith.numeric,iso)
 S3method(vec_arith.numeric,julian)
 S3method(vec_arith.numeric,rd_fixed)
 S3method(vec_arith.rd_fixed,numeric)
@@ -57,6 +65,7 @@ S3method(vec_ptype_abbr,rd_fixed)
 export(advent)
 export(alt_orthodox_easter)
 export(as_gregorian)
+export(as_iso)
 export(as_julian)
 export(as_rd)
 export(as_time_of_day)
@@ -69,6 +78,7 @@ export(easter)
 export(epiphany)
 export(full_moons)
 export(gregorian)
+export(iso_date)
 export(julian)
 export(location)
 export(lunar_phase)
