day_of_year now a method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ S3method(as_time_of_day,POSIXlt)
 S3method(as_time_of_day,default)
 S3method(as_time_of_day,numeric)
 S3method(as_time_of_day,rd_fixed)
+S3method(day_of_year,gregorian)
+S3method(day_of_year,iso)
 S3method(format,gregorian)
 S3method(format,iso)
 S3method(format,julian)
