--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,10 @@ S3method(as_rd,integer)
 S3method(as_rd,iso)
 S3method(as_rd,julian)
 S3method(as_rd,numeric)
+S3method(as_rd,roman_date)
+S3method(as_roman,default)
+S3method(as_roman,julian)
+S3method(as_roman,rd_fixed)
 S3method(as_time_of_day,POSIXct)
 S3method(as_time_of_day,POSIXlt)
 S3method(as_time_of_day,default)
@@ -27,6 +31,7 @@ S3method(format,gregorian)
 S3method(format,iso)
 S3method(format,julian)
 S3method(format,location)
+S3method(format,roman_date)
 S3method(format,time_of_day)
 S3method(lunar_phase,default)
 S3method(lunar_phase,rd_fixed)
@@ -64,12 +69,14 @@ S3method(vec_ptype_abbr,gregorian)
 S3method(vec_ptype_abbr,julian)
 S3method(vec_ptype_abbr,location)
 S3method(vec_ptype_abbr,rd_fixed)
+S3method(vec_ptype_abbr,roman_date)
 export(advent)
 export(alt_orthodox_easter)
 export(as_gregorian)
 export(as_iso)
 export(as_julian)
 export(as_rd)
+export(as_roman)
 export(as_time_of_day)
 export(christmas)
 export(day_of_month)
@@ -79,9 +86,9 @@ export(days_remaining)
 export(easter)
 export(epiphany)
 export(full_moons)
-export(gregorian)
+export(gregorian_date)
 export(iso_date)
-export(julian)
+export(julian_date)
 export(location)
 export(lunar_phase)
 export(month_of_year)
@@ -90,6 +97,7 @@ export(orthodox_christmas)
 export(orthodox_easter)
 export(pentecost)
 export(rd_fixed)
+export(roman_date)
 export(sunrise)
 export(sunset)
 export(time_of_day)
