First pass at linear_granularity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.Date,gregorian)
 S3method(as.character,gregorian)
 S3method(as.character,iso)
 S3method(as.character,julian)
+S3method(as.character,linear_granularity)
 S3method(as.character,roman_date)
 S3method(as_gregorian,default)
 S3method(as_gregorian,rd_fixed)
@@ -32,6 +33,7 @@ S3method(day_of_year,iso)
 S3method(format,gregorian)
 S3method(format,iso)
 S3method(format,julian)
+S3method(format,linear_granularity)
 S3method(format,location)
 S3method(format,roman_date)
 S3method(format,time_of_day)
@@ -72,6 +74,7 @@ S3method(vec_ptype_abbr,julian)
 S3method(vec_ptype_abbr,location)
 S3method(vec_ptype_abbr,rd_fixed)
 S3method(vec_ptype_abbr,roman_date)
+S3method(vec_ptype_full,linear_granularity)
 export(advent)
 export(alt_orthodox_easter)
 export(as_gregorian)
@@ -91,6 +94,7 @@ export(full_moons)
 export(gregorian_date)
 export(iso_date)
 export(julian_date)
+export(linear_granularity)
 export(location)
 export(lunar_phase)
 export(month_of_year)
@@ -112,4 +116,5 @@ export(us_labor_day)
 export(us_memorial_day)
 export(week_of_month)
 export(week_of_year)
+export(year)
 import(vctrs)
