--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(sunset,rd_fixed)
 S3method(vec_arith,gregorian)
 S3method(vec_arith,iso)
 S3method(vec_arith,julian)
+S3method(vec_arith,linear_granularity)
 S3method(vec_arith,rd_fixed)
 S3method(vec_arith,rd_fixed.default)
 S3method(vec_arith.gregorian,gregorian)
@@ -54,17 +55,23 @@ S3method(vec_arith.iso,iso)
 S3method(vec_arith.iso,numeric)
 S3method(vec_arith.julian,julian)
 S3method(vec_arith.julian,numeric)
+S3method(vec_arith.linear_granularity,linear_granularity)
+S3method(vec_arith.linear_granularity,numeric)
 S3method(vec_arith.numeric,gregorian)
 S3method(vec_arith.numeric,iso)
 S3method(vec_arith.numeric,julian)
+S3method(vec_arith.numeric,linear_granularity)
 S3method(vec_arith.numeric,rd_fixed)
 S3method(vec_arith.rd_fixed,numeric)
 S3method(vec_arith.rd_fixed,rd_fixed)
+S3method(vec_cast,double.linear_granularity)
 S3method(vec_cast,double.rd_fixed)
 S3method(vec_cast,integer.rd_fixed)
+S3method(vec_cast,linear_granularity.linear_granularity)
 S3method(vec_cast,rd_fixed.double)
 S3method(vec_cast,rd_fixed.rd_fixed)
 S3method(vec_ptype2,double.rd_fixed)
+S3method(vec_ptype2,linear_granularity.linear_granularity)
 S3method(vec_ptype2,location.location)
 S3method(vec_ptype2,rd_fixed.double)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
