--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ S3method(vec_arith.numeric,linear_granularity)
 S3method(vec_arith.numeric,rd_fixed)
 S3method(vec_arith.rd_fixed,numeric)
 S3method(vec_arith.rd_fixed,rd_fixed)
+S3method(vec_cast,double.gregorian)
 S3method(vec_cast,double.linear_granularity)
 S3method(vec_cast,double.rd_fixed)
 S3method(vec_cast,integer.rd_fixed)
