Generalized linear_granularity to linear_cyclic to handle any combinations of linear and cyclic granularities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ S3method(as.Date,gregorian)
 S3method(as.character,gregorian)
 S3method(as.character,iso)
 S3method(as.character,julian)
-S3method(as.character,linear_granularity)
+S3method(as.character,linear_cyclic)
 S3method(as.character,roman_date)
 S3method(as_gregorian,default)
 S3method(as_gregorian,rd_fixed)
@@ -33,7 +33,7 @@ S3method(day_of_year,iso)
 S3method(format,gregorian)
 S3method(format,iso)
 S3method(format,julian)
-S3method(format,linear_granularity)
+S3method(format,linear_cyclic)
 S3method(format,location)
 S3method(format,roman_date)
 S3method(format,time_of_day)
@@ -46,7 +46,7 @@ S3method(sunset,rd_fixed)
 S3method(vec_arith,gregorian)
 S3method(vec_arith,iso)
 S3method(vec_arith,julian)
-S3method(vec_arith,linear_granularity)
+S3method(vec_arith,linear_cyclic)
 S3method(vec_arith,rd_fixed)
 S3method(vec_arith,rd_fixed.default)
 S3method(vec_arith.gregorian,gregorian)
@@ -55,24 +55,24 @@ S3method(vec_arith.iso,iso)
 S3method(vec_arith.iso,numeric)
 S3method(vec_arith.julian,julian)
 S3method(vec_arith.julian,numeric)
-S3method(vec_arith.linear_granularity,linear_granularity)
-S3method(vec_arith.linear_granularity,numeric)
+S3method(vec_arith.linear_cyclic,linear_cyclic)
+S3method(vec_arith.linear_cyclic,numeric)
 S3method(vec_arith.numeric,gregorian)
 S3method(vec_arith.numeric,iso)
 S3method(vec_arith.numeric,julian)
-S3method(vec_arith.numeric,linear_granularity)
+S3method(vec_arith.numeric,linear_cyclic)
 S3method(vec_arith.numeric,rd_fixed)
 S3method(vec_arith.rd_fixed,numeric)
 S3method(vec_arith.rd_fixed,rd_fixed)
 S3method(vec_cast,double.gregorian)
-S3method(vec_cast,double.linear_granularity)
+S3method(vec_cast,double.linear_cyclic)
 S3method(vec_cast,double.rd_fixed)
 S3method(vec_cast,integer.rd_fixed)
-S3method(vec_cast,linear_granularity.linear_granularity)
+S3method(vec_cast,linear_cyclic.linear_cyclic)
 S3method(vec_cast,rd_fixed.double)
 S3method(vec_cast,rd_fixed.rd_fixed)
 S3method(vec_ptype2,double.rd_fixed)
-S3method(vec_ptype2,linear_granularity.linear_granularity)
+S3method(vec_ptype2,linear_cyclic.linear_cyclic)
 S3method(vec_ptype2,location.location)
 S3method(vec_ptype2,rd_fixed.double)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
@@ -82,7 +82,7 @@ S3method(vec_ptype_abbr,julian)
 S3method(vec_ptype_abbr,location)
 S3method(vec_ptype_abbr,rd_fixed)
 S3method(vec_ptype_abbr,roman_date)
-S3method(vec_ptype_full,linear_granularity)
+S3method(vec_ptype_full,linear_cyclic)
 export(advent)
 export(alt_orthodox_easter)
 export(as_gregorian)
@@ -102,7 +102,7 @@ export(full_moons)
 export(gregorian_date)
 export(iso_date)
 export(julian_date)
-export(linear_granularity)
+export(linear_cyclic)
 export(location)
 export(lunar_phase)
 export(month_of_year)
