Started on Hebrew calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(as.character,linear_cyclic)
 S3method(as.character,roman_date)
 S3method(as_gregorian,default)
 S3method(as_gregorian,rd_fixed)
+S3method(as_hebrew,default)
+S3method(as_hebrew,rd_fixed)
 S3method(as_iso,default)
 S3method(as_iso,rd_fixed)
 S3method(as_julian,default)
@@ -16,6 +18,7 @@ S3method(as_rd,Date)
 S3method(as_rd,character)
 S3method(as_rd,default)
 S3method(as_rd,gregorian)
+S3method(as_rd,hebrew)
 S3method(as_rd,integer)
 S3method(as_rd,iso)
 S3method(as_rd,julian)
@@ -31,6 +34,7 @@ S3method(as_time_of_day,rd_fixed)
 S3method(day_of_year,gregorian)
 S3method(day_of_year,iso)
 S3method(format,gregorian)
+S3method(format,hebrew)
 S3method(format,iso)
 S3method(format,julian)
 S3method(format,linear_cyclic)
@@ -86,6 +90,7 @@ S3method(vec_ptype_full,linear_cyclic)
 export(advent)
 export(alt_orthodox_easter)
 export(as_gregorian)
+export(as_hebrew)
 export(as_iso)
 export(as_julian)
 export(as_rd)
@@ -100,6 +105,7 @@ export(easter)
 export(epiphany)
 export(full_moons)
 export(gregorian_date)
+export(hebrew_date)
 export(iso_date)
 export(julian_date)
 export(linear_cyclic)
