Added Jewish holidays

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ export(easter)
 export(epiphany)
 export(full_moons)
 export(gregorian_date)
+export(hanukkah)
 export(hebrew_date)
 export(iso_date)
 export(julian_date)
@@ -115,9 +116,14 @@ export(month_of_year)
 export(new_moons)
 export(orthodox_christmas)
 export(orthodox_easter)
+export(passover)
 export(pentecost)
+export(purim)
 export(rd_fixed)
 export(roman_date)
+export(rosh_hashanah)
+export(shavuot)
+export(sukkot)
 export(sunrise)
 export(sunset)
 export(time_of_day)
@@ -131,4 +137,5 @@ export(us_memorial_day)
 export(week_of_month)
 export(week_of_year)
 export(year)
+export(yom_kippur)
 import(vctrs)
