--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -39,6 +39,7 @@ reference:
     contents:
       - easter
       - us_labor_day
+      - rosh_hashanah
   - title: Time of day
     contents:
       - time_of_day
