Added Islamic calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(as_gregorian,default)
 S3method(as_gregorian,rd_fixed)
 S3method(as_hebrew,default)
 S3method(as_hebrew,rd_fixed)
+S3method(as_islamic,default)
+S3method(as_islamic,rd_fixed)
 S3method(as_iso,default)
 S3method(as_iso,rd_fixed)
 S3method(as_julian,default)
@@ -17,6 +19,7 @@ S3method(as_rd,default)
 S3method(as_rd,gregorian)
 S3method(as_rd,hebrew)
 S3method(as_rd,integer)
+S3method(as_rd,islamic)
 S3method(as_rd,iso)
 S3method(as_rd,julian)
 S3method(as_rd,numeric)
@@ -32,6 +35,7 @@ S3method(day_of_year,gregorian)
 S3method(day_of_year,iso)
 S3method(format,gregorian)
 S3method(format,hebrew)
+S3method(format,islamic)
 S3method(format,iso)
 S3method(format,julian)
 S3method(format,linear_cyclic)
@@ -71,6 +75,7 @@ S3method(vec_ptype2,rd_fixed.double)
 S3method(vec_ptype2,rd_fixed.rd_fixed)
 S3method(vec_ptype2,time_of_day.time_of_day)
 S3method(vec_ptype_abbr,gregorian)
+S3method(vec_ptype_abbr,islamic)
 S3method(vec_ptype_abbr,julian)
 S3method(vec_ptype_abbr,location)
 S3method(vec_ptype_abbr,rd_fixed)
@@ -80,6 +85,7 @@ export(advent)
 export(alt_orthodox_easter)
 export(as_gregorian)
 export(as_hebrew)
+export(as_islamic)
 export(as_iso)
 export(as_julian)
 export(as_rd)
@@ -96,6 +102,7 @@ export(full_moons)
 export(gregorian_date)
 export(hanukkah)
 export(hebrew_date)
+export(islamic_date)
 export(iso_date)
 export(julian_date)
 export(linear_cyclic)
