Added islamic holidays

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,17 +97,21 @@ export(day_of_week)
 export(day_of_year)
 export(days_remaining)
 export(easter)
+export(eid_al_adha)
+export(eid_al_fitr)
 export(epiphany)
 export(full_moons)
 export(gregorian_date)
 export(hanukkah)
 export(hebrew_date)
 export(islamic_date)
+export(islamic_new_year)
 export(iso_date)
 export(julian_date)
 export(linear_cyclic)
 export(location)
 export(lunar_phase)
+export(mawlid)
 export(month_of_year)
 export(new_moons)
 export(orthodox_christmas)
@@ -115,6 +119,7 @@ export(orthodox_easter)
 export(passover)
 export(pentecost)
 export(purim)
+export(ramadan)
 export(rd_fixed)
 export(roman_date)
 export(rosh_hashanah)
