Casting to numeric

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,9 +62,20 @@ S3method(vec_arith.numeric,rd_fixed)
 S3method(vec_arith.rd_fixed,numeric)
 S3method(vec_arith.rd_fixed,rd_fixed)
 S3method(vec_cast,double.gregorian)
+S3method(vec_cast,double.hebrew)
+S3method(vec_cast,double.islamic)
+S3method(vec_cast,double.iso)
+S3method(vec_cast,double.julian)
 S3method(vec_cast,double.linear_cyclic)
 S3method(vec_cast,double.rd_fixed)
+S3method(vec_cast,double.roman_date)
+S3method(vec_cast,integer.gregorian)
+S3method(vec_cast,integer.hebrew)
+S3method(vec_cast,integer.islamic)
+S3method(vec_cast,integer.iso)
+S3method(vec_cast,integer.julian)
 S3method(vec_cast,integer.rd_fixed)
+S3method(vec_cast,integer.roman_date)
 S3method(vec_cast,linear_cyclic.linear_cyclic)
 S3method(vec_cast,rd_fixed.double)
 S3method(vec_cast,rd_fixed.rd_fixed)
