Added generic granularity functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,8 @@ export(eid_al_adha)
 export(eid_al_fitr)
 export(epiphany)
 export(full_moons)
+export(granularities)
+export(granularity)
 export(gregorian_date)
 export(hanukkah)
 export(hebrew_date)
