--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,63 +3,47 @@
 S3method(as.Date,calcalvec)
 S3method(as.character,calcalvec)
 S3method(as.character,linear_cyclic)
-S3method(as_rd,Date)
-S3method(as_rd,calcalvec)
-S3method(as_rd,character)
-S3method(as_rd,default)
-S3method(as_rd,integer)
-S3method(as_rd,numeric)
-S3method(as_rd,rd_fixed)
+S3method(as_date,Date)
+S3method(as_date,calcalvec)
+S3method(as_date,default)
+S3method(as_date,numeric)
 S3method(as_time_of_day,POSIXct)
 S3method(as_time_of_day,POSIXlt)
+S3method(as_time_of_day,calcalvec)
 S3method(as_time_of_day,default)
 S3method(as_time_of_day,numeric)
-S3method(as_time_of_day,rd_fixed)
 S3method(format,calcalvec)
 S3method(format,linear_cyclic)
 S3method(format,location)
 S3method(format,time_of_day)
-S3method(lunar_phase,default)
-S3method(lunar_phase,rd_fixed)
 S3method(obj_print_header,calcalvec)
 S3method(print,calcal)
+S3method(sunrise,calcalvec)
 S3method(sunrise,default)
-S3method(sunrise,rd_fixed)
+S3method(sunset,calcalvec)
 S3method(sunset,default)
-S3method(sunset,rd_fixed)
 S3method(vec_arith,calcalvec)
 S3method(vec_arith,linear_cyclic)
-S3method(vec_arith,rd_fixed)
-S3method(vec_arith,rd_fixed.default)
 S3method(vec_arith.calcalvec,calcalvec)
 S3method(vec_arith.calcalvec,numeric)
 S3method(vec_arith.linear_cyclic,linear_cyclic)
 S3method(vec_arith.linear_cyclic,numeric)
 S3method(vec_arith.numeric,calcalvec)
 S3method(vec_arith.numeric,linear_cyclic)
-S3method(vec_arith.numeric,rd_fixed)
-S3method(vec_arith.rd_fixed,numeric)
-S3method(vec_arith.rd_fixed,rd_fixed)
 S3method(vec_cast,calcalvec.calcalvec)
+S3method(vec_cast,calcalvec.double)
 S3method(vec_cast,double.calcalvec)
-S3method(vec_cast,double.gregorian)
 S3method(vec_cast,double.linear_cyclic)
-S3method(vec_cast,double.rd_fixed)
 S3method(vec_cast,integer.calcalvec)
-S3method(vec_cast,integer.gregorian)
-S3method(vec_cast,integer.rd_fixed)
 S3method(vec_cast,linear_cyclic.linear_cyclic)
-S3method(vec_cast,rd_fixed.double)
-S3method(vec_cast,rd_fixed.rd_fixed)
-S3method(vec_ptype2,double.rd_fixed)
+S3method(vec_ptype2,calcalvec.calcalvec)
+S3method(vec_ptype2,calcalvec.double)
+S3method(vec_ptype2,double.calcalvec)
 S3method(vec_ptype2,linear_cyclic.linear_cyclic)
 S3method(vec_ptype2,location.location)
-S3method(vec_ptype2,rd_fixed.double)
-S3method(vec_ptype2,rd_fixed.rd_fixed)
 S3method(vec_ptype2,time_of_day.time_of_day)
 S3method(vec_ptype_abbr,calcalvec)
 S3method(vec_ptype_abbr,location)
-S3method(vec_ptype_abbr,rd_fixed)
 S3method(vec_ptype_full,linear_cyclic)
 export(advent)
 export(alt_orthodox_easter)
@@ -69,7 +53,6 @@ export(as_hebrew)
 export(as_islamic)
 export(as_iso)
 export(as_julian)
-export(as_rd)
 export(as_roman)
 export(as_time_of_day)
 export(cal_calendar)
@@ -111,7 +94,6 @@ export(passover)
 export(pentecost)
 export(purim)
 export(ramadan)
-export(rd_fixed)
 export(roman_date)
 export(rosh_hashanah)
 export(shavuot)
