--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,9 @@ S3method(vec_cast,integer.calcalvec)
 S3method(vec_cast,linear_cyclic.linear_cyclic)
 S3method(vec_ptype2,calcalvec.calcalvec)
 S3method(vec_ptype2,calcalvec.double)
+S3method(vec_ptype2,calcalvec.integer)
 S3method(vec_ptype2,double.calcalvec)
+S3method(vec_ptype2,integer.calcalvec)
 S3method(vec_ptype2,linear_cyclic.linear_cyclic)
 S3method(vec_ptype2,location.location)
 S3method(vec_ptype2,time_of_day.time_of_day)
