Exported more Jewish holidays

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,7 +99,9 @@ export(shavuot)
 export(sukkot)
 export(sunrise)
 export(sunset)
+export(ta_anit_esther)
 export(time_of_day)
+export(tishah_be_av)
 export(unlucky_fridays)
 export(us_daylight_saving_end)
 export(us_daylight_saving_start)
