Adding Chinese calendar (not yet working)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(vec_ptype_abbr,location)
 S3method(vec_ptype_full,linear_cyclic)
 export(advent)
 export(alt_orthodox_easter)
+export(as_chinese)
 export(as_date)
 export(as_gregorian)
 export(as_hebrew)
@@ -61,6 +62,7 @@ export(cal_islamic)
 export(cal_iso)
 export(cal_julian)
 export(cal_roman)
+export(chinese_date)
 export(christmas)
 export(day_of_month)
 export(day_of_week)
