Chinese new year and Qing ming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(cal_iso)
 export(cal_julian)
 export(cal_roman)
 export(chinese_date)
+export(chinese_new_year)
 export(christmas)
 export(day_of_month)
 export(day_of_week)
@@ -94,6 +95,7 @@ export(orthodox_easter)
 export(passover)
 export(pentecost)
 export(purim)
+export(qing_ming)
 export(ramadan)
 export(roman_date)
 export(rosh_hashanah)
