Exported chinese holidays

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(day_of_month)
 export(day_of_week)
 export(day_of_year)
 export(days_remaining)
+export(dragon_festival)
 export(easter)
 export(eid_al_adha)
 export(eid_al_fitr)
