Added as_date.list and as.list.calcalvec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 S3method(as.Date,calcalvec)
 S3method(as.character,calcalvec)
 S3method(as.character,linear_cyclic)
+S3method(as.list,calcalvec)
 S3method(as_date,Date)
 S3method(as_date,calcalvec)
 S3method(as_date,character)
 S3method(as_date,default)
+S3method(as_date,list)
 S3method(as_date,numeric)
 S3method(as_time_of_day,POSIXct)
 S3method(as_time_of_day,POSIXlt)
