Renaming for readability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as.Date,calcalvec)
 S3method(as.character,calcalvec)
+S3method(as.data.frame,calcalvec)
 S3method(as.list,calcalvec)
 S3method(as_date,Date)
 S3method(as_date,calcalvec)
@@ -68,8 +69,8 @@ export(eid_al_adha)
 export(eid_al_fitr)
 export(epiphany)
 export(full_moons)
-export(granularities)
 export(granularity)
+export(granularity_names)
 export(gregorian_date)
 export(hanukkah)
 export(hebrew_date)
