Added coptic and ethiopian calendars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,9 @@ S3method(vec_ptype_abbr,location)
 export(advent)
 export(alt_orthodox_easter)
 export(as_chinese)
+export(as_coptic)
 export(as_date)
+export(as_ethiopic)
 export(as_gregorian)
 export(as_hebrew)
 export(as_islamic)
@@ -50,6 +52,8 @@ export(as_roman)
 export(as_time_of_day)
 export(cal_calendar)
 export(cal_chinese)
+export(cal_coptic)
+export(cal_ethiopic)
 export(cal_gregorian)
 export(cal_hebrew)
 export(cal_islamic)
@@ -59,6 +63,8 @@ export(cal_roman)
 export(chinese_date)
 export(chinese_new_year)
 export(christmas)
+export(coptic_christmas)
+export(coptic_date)
 export(day_of_month)
 export(day_of_week)
 export(day_of_year)
@@ -68,6 +74,7 @@ export(easter)
 export(eid_al_adha)
 export(eid_al_fitr)
 export(epiphany)
+export(ethiopic_date)
 export(full_moons)
 export(granularity)
 export(granularity_names)
