--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ S3method(vec_arith.numeric,calcalvec)
 S3method(vec_cast,calcalvec.calcalvec)
 S3method(vec_cast,calcalvec.double)
 S3method(vec_cast,double.calcalvec)
+S3method(vec_cast,double.time_of_day)
 S3method(vec_cast,integer.calcalvec)
 S3method(vec_ptype2,calcalvec.calcalvec)
 S3method(vec_ptype2,calcalvec.double)
@@ -39,6 +40,7 @@ S3method(vec_ptype_abbr,calcalvec)
 S3method(vec_ptype_abbr,location)
 export(advent)
 export(alt_orthodox_easter)
+export(as_bahai)
 export(as_chinese)
 export(as_coptic)
 export(as_date)
@@ -50,6 +52,10 @@ export(as_iso)
 export(as_julian)
 export(as_roman)
 export(as_time_of_day)
+export(bahai_date)
+export(bahai_new_year)
+export(birth_of_the_bab)
+export(cal_bahai)
 export(cal_calendar)
 export(cal_chinese)
 export(cal_coptic)
@@ -75,6 +81,7 @@ export(eid_al_adha)
 export(eid_al_fitr)
 export(epiphany)
 export(ethiopic_date)
+export(feast_of_ridvan)
 export(full_moons)
 export(granularity)
 export(granularity_names)
@@ -89,6 +96,7 @@ export(location)
 export(lunar_phase)
 export(mawlid)
 export(month_of_year)
+export(naw_ruz)
 export(new_date)
 export(new_moons)
 export(orthodox_christmas)
