--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -47,7 +47,7 @@ reference:
       - week_of_year
       - month_of_year
       - year
-  - title: Bahai calendar
+  - title: Baháʼí calendar
     contents:
       - bahai_date
       - as_bahai
