Added icelandic calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(as_chinese)
 export(as_date)
 export(as_gregorian)
 export(as_hebrew)
+export(as_icelandic)
 export(as_islamic)
 export(as_iso)
 export(as_julian)
@@ -59,6 +60,7 @@ export(cal_calendar)
 export(cal_chinese)
 export(cal_gregorian)
 export(cal_hebrew)
+export(cal_icelandic)
 export(cal_islamic)
 export(cal_iso)
 export(cal_julian)
