--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(as_iso)
 export(as_julian)
 export(as_roman)
 export(as_time_of_day)
+export(balinese_date)
 export(cal_calendar)
 export(cal_chinese)
 export(cal_gregorian)
