Added as_balinese and updated pkgdown

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ S3method(vec_ptype_abbr,location)
 export(advent)
 export(alt_orthodox_easter)
 export(as_bahai)
+export(as_balinese)
 export(as_chinese)
 export(as_coptic)
 export(as_date)
