--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,7 @@ export(islamic_date)
 export(islamic_new_year)
 export(iso_date)
 export(julian_date)
+export(kajeng_keliwon)
 export(location)
 export(lunar_phase)
 export(mawlid)
@@ -120,6 +121,7 @@ export(sunset)
 export(ta_anit_esther)
 export(time_of_day)
 export(tishah_be_av)
+export(tumpek)
 export(unlucky_fridays)
 export(us_daylight_saving_end)
 export(us_daylight_saving_start)
