--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -100,6 +100,7 @@ reference:
       - ramadan
       - chinese_new_year
       - bahai_new_year
+      - kajeng_keliwon
   - title: Granularities
     contents:
       - granularity
