--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(granularity_names)
 export(gregorian_date)
 export(hanukkah)
 export(hebrew_date)
+export(icelandic_date)
 export(islamic_date)
 export(islamic_new_year)
 export(iso_date)
