Added old hindu solar calendar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(as_icelandic)
 export(as_islamic)
 export(as_iso)
 export(as_julian)
+export(as_old_hindu_solar)
 export(as_roman)
 export(as_time_of_day)
 export(bahai_date)
@@ -70,6 +71,7 @@ export(cal_icelandic)
 export(cal_islamic)
 export(cal_iso)
 export(cal_julian)
+export(cal_old_hindu_solar)
 export(cal_roman)
 export(chinese_date)
 export(chinese_new_year)
@@ -106,6 +108,7 @@ export(month_of_year)
 export(naw_ruz)
 export(new_date)
 export(new_moons)
+export(old_hindu_solar_date)
 export(orthodox_christmas)
 export(orthodox_easter)
 export(passover)
